@@ -10,6 +10,7 @@ pellet-charcoal=Charcoal pellet
 
 [entity-name]
 home=Home
+sb-ore-sorting-facility-5=Ore sorting facility 5
 
 [technology-name]
 sb-startup1=Crush stiratite
