@@ -11,5 +11,9 @@ data:extend(
   {
     type = "recipe-category",
     name = "thermal-extractor",
+  },
+  {
+    type = "recipe-category",
+    name = "ore-sorting-5",
   }
 })
