@@ -25,6 +25,7 @@ Date: ???
     - Disabled Zinc, Nickel, and Cobalt plates
     - Move Nitinol smelting up a tier
     - Hide extra power entities
+    - Added Ore sorting facility 5
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
